--- a/src/BlazorContacts.Client/_ViewImports.cshtml
+++ b/src/BlazorContacts.Client/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @using Microsoft.AspNetCore.Blazor.Routing
 @using BlazorContacts.Client
 @using BlazorContacts.Client.Shared
+
+@addTagHelper *, BlazorStrap
