--- a/src/BlazorContacts.Client/Pages/Index.cshtml
+++ b/src/BlazorContacts.Client/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 @inject ContactsClientService contactsService
 @inject ModalService modalService
 @using BlazorContacts.Shared.Models
+@using BlazorStrap
 
 <div class="contactModel">
     <div class="col-md-6">
@@ -13,6 +14,8 @@
 <div class="contactModel">
     <div class="col-md-6">
         <button class="btn btn-default" onclick="@Add">Add</button>
+        <br />
+        <br />
     </div>
 </div>
 
@@ -92,30 +95,18 @@ else
     <div>loading...</div>
 }
 
-<div class="modal" id="deleteModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
+<Modal IsOpen="@deleteModalIsOpen">
+    <ModalHeader OnClick="@((e) => { deleteModalIsOpen = false; StateHasChanged(); })">Delete contact</ModalHeader>
+    <ModalBody><p>Are you sure you want to delete contact "@deletingModel?.Name"?</p></ModalBody>
+    <ModalFooter>
+        <BlazorButton Color="Color.Warning" OnClick="@(async (e) => await ConfirmDelete())">Delete</BlazorButton>
+        <BlazorButton Color="Color.Secondary" OnClick="@((e) => { deleteModalIsOpen = false; StateHasChanged(); })">Close</BlazorButton>
+    </ModalFooter>
+</Modal>
 
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Confirm delete</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
+@*<Modal IsOpen="@addModalIsOpen">
 
-            <!-- Modal body -->
-            <div class="modal-body">
-                Are you sure you want to delete contact "@deletingModel?.Name"?
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" onclick=@(async () => await ConfirmDelete())>Delete</button>
-            </div>
-
-        </div>
-    </div>
-</div>
+</Modal>*@
 
 <div class="modal" id="addModal">
     <div class="modal-dialog">
@@ -158,10 +149,7 @@ else
 @functions {
     private List<ContactModel> contacts = new List<ContactModel>();
     private bool loading = true;
-    private ContactModel editingModel = new ContactModel();
-    private ContactModel deletingModel = null;
-    private ContactModel addModel = new ContactModel();
-    
+
     private async Task Refresh()
     {
         contacts = await contactsService.GetAllAsync();
@@ -181,14 +169,16 @@ else
         NotifierService.Info("Change saved");
     }
 
+    #region delete contact
+
+    private ContactModel deletingModel = null;
+    private bool deleteModalIsOpen = false;
+
     public void DeleteContact(ContactModel model)
     {
         NotifierService.Log("in DeleteContact");
         deletingModel = model;
-        //if (model != null)
-        //{
-        modalService.Show("deleteModal");
-        //}
+        deleteModalIsOpen = true;
     }
 
     public async Task ConfirmDelete()
@@ -200,7 +190,16 @@ else
             contacts.Remove(deletingModel);
             NotifierService.Info("Contact deleted");
         }
+        deleteModalIsOpen = false;
+        StateHasChanged();
     }
+
+    #endregion
+
+    #region add contact
+
+    private ContactModel addModel = new ContactModel();
+    private bool addModalIsOpen = false;
 
     public void Add()
     {
@@ -223,7 +222,14 @@ else
         contacts.Add(addModel);
         addModel = new ContactModel();
         modalService.Hide("addModal");
+        NotifierService.Info("Contact saved");
     }
+
+    #endregion
+
+    #region edit contact
+
+    private ContactModel editingModel = new ContactModel();
 
     public void Edit(ContactModel contact)
     {
@@ -257,4 +263,6 @@ else
             editingModel = new ContactModel();
         }
     }
+
+    #endregion
 }
