--- a/src/BlazorContacts.Client/Pages/Index.cshtml
+++ b/src/BlazorContacts.Client/Pages/Index.cshtml
@@ -182,6 +182,8 @@ else
         addModel = new ContactModel();
         modalService.Hide("addModal");
         NotifierService.Info("Contact saved");
+        addModalIsOpen = false;
+        StateHasChanged();
     }
 
     #endregion
